# cpp-gd-modification

./: .gitmodules  CMakeLists.txt  README.md
src/: dllmain.cpp
